# danger-py-jscpd

./: .travis.yml  LICENSE  README.md  dangerfile.py  pyproject.toml  setup.cfg
danger_py_jscpd/: __init__.py  plugin.py  report_parser.py  test_a.py
tests/: conftest.py  test_parser.py  test_plugin.py
tests/fixtures/: jscpd-report-empty.json  jscpd-report.json
